# pygame_practice_pong

./: README.md  main.py  pyproject.toml
lib/sprites/: __init__.py  square.py
pygame_practice_pong/: main.py
pygame_practice_pong/lib/: colors.py
pygame_practice_pong/lib/game_objects/: __init__.py  ball.py  base_object.py  npc.py  pc.py
pygame_practice_pong/lib/sprites/: __init__.py
tests/: test_pygame_practice_pong.py
