[tool.poetry]
name = "pygame_practice_pong"
version = "0.1.0"
description = ""
authors = ["John <Tagmeh@Gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
mypy = "^0.931"
black = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
