[tool.poetry]
name = "pygame_practice_pong"
version = "0.1.0"
description = ""
authors = ["John <Tagmeh@Gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"


[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
strict = "True"
implicit_reexport = "True"
ignore_missing_imports = "True"
